<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">学苑</string>
    <string name="settings">设置</string>
    <string name="app_about">  学苑项目基于现在手机等android移动设备在学生团体特别是大学生团体中的普及量，我们将以此为切入点，着手开发出一款方便老师点名的App；在学生端，提供了一些贴近学生学习生活必须的信息，如学生课表，课程提醒，考试信息，在线学习视频的观看。
简言之，学苑是一款为在校大学师生提供点名、签到、课程提醒、日程管理、在线课堂等服务的学习工具类的app。</string>

    <string-array name="week">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>

    <string name="check_update">版本更新</string>
    <string name="version_now">当前版本:</string>
    <string name="version_new">最新版本</string>
    <string name="version_num">1.0</string>
    <string name="describe">图片都保存在/sdcard/learnpark/photo/文件夹中</string>
    <string name="Camerahit">点我拍照</string>
    <string name="filename">/sdcard/learnpark/photo/</string>
    <string name="finsh">返回</string>
    <string name="agin">继续拍摄</string>
    <string name="nothing"></string>
    <string name="imagename">照片名</string>
    <string name="save">保存</string>
    <string name="share_info">亲，你也来使用学苑吧</string>
    

</resources>